Astar is now static and some small fixes